# epson-inkjet-printer-escpr-3

./: COPYING  Makefile.am  Makefile.in  NEWS  README  README.ja  aclocal.m4  bootstrap  config.h.in  config.h.in~  configure  configure.ac  epson-inkjet-printer-escpr.spec  epson-inkjet-printer-escpr.spec.in  epson-inkjet-printer-escpr_1.0.3.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.0.3.orig.tar.gz.id  epson-inkjet-printer-escpr_1.0.4.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.0.4.orig.tar.gz.id  epson-inkjet-printer-escpr_1.1.0.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.1.0.orig.tar.gz.id  epson-inkjet-printer-escpr_1.1.1.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.1.1.orig.tar.gz.id  epson-inkjet-printer-escpr_1.2.2.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.2.2.orig.tar.gz.id  epson-inkjet-printer-escpr_1.2.3.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.2.3.orig.tar.gz.id  epson-inkjet-printer-escpr_1.3.0.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.3.0.orig.tar.gz.id  epson-inkjet-printer-escpr_1.4.0.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.4.0.orig.tar.gz.id  epson-inkjet-printer-escpr_1.4.1.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.4.1.orig.tar.gz.id  epson-inkjet-printer-escpr_1.4.5.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.4.5.orig.tar.gz.id  epson-inkjet-printer-escpr_1.5.2.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.5.2.orig.tar.gz.id  epson-inkjet-printer-escpr_1.6.10.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.6.10.orig.tar.gz.id  epson-inkjet-printer-escpr_1.6.11.orig.tar.gz.delta  epson-inkjet-printer-escpr_1.6.11.orig.tar.gz.id  (+35 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: .git-dpm  changelog  control  control.in  copyright  epson-escpr.install  epson-escpr.postinst  epson-escpr.ppd-updater  libescpr-dev.install  libescpr1.install  libescpr1.symbols  not-installed  postinst  postrm  printer-driver-escpr.install  printer-driver-escpr.ppd-updater  rules  rules.in  source.lintian-overrides  watch
debian/patches/: 0001-Forbid-the-upstream-buildsystem-to-touch-files-under.patch  0001-The-upstream-buildsystem-touches-files-under-debian-.patch  0002-Include-xfifo.h-to-avoid-implicit-pointer-conversion.patch  0002-include-xfifo.h-to-avoid-implicit-pointer-conversion.patch  0003-Fix-suc-c-essful-typo-in-debug-message.patch  dont_touch_debian_files.patch  link_to_debian_libs.patch  series  shared_files_go_to_package_named_dir.patch  u1.4.4-fixed-a-problem-when-using-rear-feed-slot-as-inputslot.patch  xfifo_header.patch
debian/tests/: printer-driver-escpr
debian/upstream/: metadata
layout_script/: Makefile.am  Makefile.in  paper_list.csv
lib/: Makefile.am  Makefile.in  epson-escpr-api.c  epson-escpr-api.h  epson-escpr-media.h  escpr_api.c  escpr_api.h  escpr_cmd.c  escpr_cmd.h  escpr_def.h  escpr_osdep.c  escpr_rle.c  escpr_rle.h  escpr_sp.c  escpr_sp.h
lsb/: lsb-rpm.spec  lsb-rpm.spec.in  makelsbpkg-perms.xml  makelsbpkg-tags.xml  makelsbpkg-tags.xml.in
patches/: 0001-The-upstream-buildsystem-touches-files-under-debian-.patch
ppd/: Epson-Artisan_1430-epson-escpr-en.ppd  Epson-Artisan_630-epson-escpr-en.ppd  Epson-Artisan_700-epson-escpr-en.ppd  Epson-Artisan_710-epson-escpr-en.ppd  Epson-Artisan_720-epson-escpr-en.ppd  Epson-Artisan_730-epson-escpr-en.ppd  Epson-Artisan_800-epson-escpr-en.ppd  Epson-Artisan_810-epson-escpr-en.ppd  Epson-Artisan_830-epson-escpr-en.ppd  Epson-Artisan_837-epson-escpr-en.ppd  Epson-E-150-epson-escpr-en.ppd  Epson-E-200-epson-escpr-en.ppd  Epson-E-300-epson-escpr-en.ppd  Epson-E-330-epson-escpr-en.ppd  Epson-E-330S-epson-escpr-en.ppd  Epson-E-340-epson-escpr-en.ppd  Epson-E-350-epson-escpr-en.ppd  Epson-E-360_Series-epson-escpr-en.ppd  Epson-E-370_Series-epson-escpr-en.ppd  Epson-E-500-epson-escpr-en.ppd  Epson-E-520-epson-escpr-en.ppd  Epson-E-530-epson-escpr-en.ppd  Epson-E-600-epson-escpr-en.ppd  Epson-E-700-epson-escpr-en.ppd  Epson-E-720-epson-escpr-en.ppd  Epson-E-800-epson-escpr-en.ppd  Epson-E-810-epson-escpr-en.ppd  Epson-E-820-epson-escpr-en.ppd  Epson-E-830_Series-epson-escpr-en.ppd  Epson-E-840_Series-epson-escpr-en.ppd  Epson-EP-306_Series-epson-escpr-en.ppd  Epson-EP-4004-epson-escpr-en.ppd  Epson-EP-702A-epson-escpr-en.ppd  Epson-EP-703A-epson-escpr-en.ppd  Epson-EP-704A-epson-escpr-en.ppd  Epson-EP-705A_Series-epson-escpr-en.ppd  Epson-EP-706A_Series-epson-escpr-en.ppd  Epson-EP-774A-epson-escpr-en.ppd  Epson-EP-775A_Series-epson-escpr-en.ppd  Epson-EP-776A_Series-epson-escpr-en.ppd  (+362 more)
src/: Makefile.am  Makefile.in  csv.c  csv.h  debug.c  debug.h  def.h  err.c  err.h  filter.c  libprtX.h  mem.c  mem.h  optBase.h  pips.h  pipsDef.h  str.c  str.h  wrapper.c
tests/: control
